# API_Cassini

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  TASKS.md  config.toml  jenkinsfile  pyproject.toml  requirements.txt
allure-report/: index.html
allure-results/: 004ec4e9-c476-4ae9-a50c-1dfd99a02328-result.json  00c4f20f-75f8-4930-954c-2b2d149b37fe-result.json  0164129b-0d5b-4b9a-9051-33dbbf4fab35-result.json  0c92725e-1939-4b1c-a9fa-b968ccc43cad-container.json  0f3901f2-7675-495e-9684-f3bf972922f0-container.json  0f426e9c-8a24-4881-b286-20a00a14efb1-container.json  138522fa-aec0-46dc-b4a2-bddcd21de220-container.json  141258e4-7f3d-4911-aa10-6674af743657-container.json  152b70f8-af7b-4dd1-b944-1d33da9bad62-container.json  1541e7a7-5165-4ada-a84e-3100c4852485-container.json  16356644-571a-47a8-9634-516dbc3366f1-container.json  164c8f80-96f8-41c1-b8e1-2b0f1b4577a1-container.json  1ebd4f8a-303e-4dc8-8379-e369e11cb6b0-container.json  1fd0ae6b-14cf-4db3-b50e-fb4ace6aa67a-container.json  2049df26-1918-464d-a19a-80ceebe3a8a4-attachment.txt  207905b5-a927-4ada-88d1-64542a6ae0d7-container.json  20810e4a-ff14-424d-9bdb-16ccb57e9587-container.json  256d532d-f17a-4fc8-bbde-79d74718bf21-container.json  25cfb7bb-a65c-4111-b217-2364b088bc9b-container.json  29f8efc3-5f8d-44d7-943b-c0bea78b601f-container.json  2a21684e-55a2-4b1b-b22a-b42b77c2f163-container.json  2b757622-5759-42cb-a6da-71bbd8ca1401-container.json  2b80bb7d-806a-40e9-a833-f4fce5f6cb31-container.json  2ddd9804-dead-4740-a10c-8142739b94d2-container.json  (+97 more)
data/: booking_example.json
(+43 files in other folders)
